# generator

./: Cargo.toml  find_unused.sh
config/generators/: aerosoul.lua  beatfox.lua  colors.lua  common.lua  demoneres.lua  genders.lua  karacel.lua  luxson_cluster.lua  obj.lua  pockitt.lua  regions.lua  rngtest.rhai  snuglin.lua  species.lua  species.rhai  test.lua  test.rhai
config/outputs/: aerosoul.lua  beatfox.lua  character.lua  demoneres.lua  karacel.lua  location.lua  obj.lua  pockitt.lua  snuglin.lua  tcp.lua  tcp_simple.lua
config/scripts/: fake.lua  output_header.lua
config_morbit/: config.json
config_morbit/generators/: aerosoul.lua  beatfox.lua  celascute.lua  colors.lua  common.lua  demoneres.lua  dopple.lua  karacel.lua  luxson_cluster.lua  mothlie.lua  mutations.lua  obj.lua  pockitt.lua  regions.lua  ruffneck.lua  snuglin.lua  species.lua  sphinx.lua  taverne.lua  tcp.lua  test.lua
config_morbit/outputs/: aerosoul.lua  beatfox.lua  celascute.lua  demoneres.lua  dopple.lua  generators.lua  id.lua  karacel.lua  mothlie.lua  obj.lua  pockitt.lua  ruffneck.lua  snuglin.lua  species.lua  sphinx.lua  tcp.lua  tcp_simple.lua
config_morbit/outputs/karacel/: ears.lua  teeth.lua
config_morbit/scripts/: fake.lua  output_header.lua
config_morbit/tcp/anomalies/: anomalylist.txt
config_morbit/tcp/conditions/: conditionlist.txt
config_morbit/tcp/modifiers/: modlist.txt
config_morbit/tcp/types/: 2018-09-22-20-26-44  dexupdate.txt  halloween.txt  random
config_morbit/tcp/types/dex/: abstract  body  creature  food  form  (+4 more)
src/: config.lua  lib.rs  main.rs
(+18 files in other folders)
