[package]
name = "generator"
version = "0.1.0"
authors = ["mraof <mraof@mraof.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
rlua = "0.16.3"
regex = "1"
tcpgen = {git = "https://github.com/mraof/tcpgen"}
