[package]
name = "generator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
walkdir = "2.3.2"
rhai = {version = "1", optional = true}
rlua = {version = "*", optional = true}
regex = "1.5.4"

[features]
default = ["rhai", "rlua"]

